# tty-invaders

./: .gitignore  CHANGELOG.md  COLORS.md  GAME_BALANCE.md  IMPROVEMENTS.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  settings.json  verify_install.sh
tests/: test_collision.py  test_entities.py  test_persistence.py  test_scoring.py
tty_invaders/: __main__.py  config.py  game.py
tty_invaders/audio/: sound.py
tty_invaders/audio/sounds/: README.md
tty_invaders/entities/: alien.py  bullet.py  formation.py  mystery_ship.py  player.py  shield.py
tty_invaders/renderer/: effects.py  sprites.py  terminal.py  ui.py
tty_invaders/states/: base.py  game_over.py  leaderboard.py  menu.py  options.py  paused.py  playing.py
tty_invaders/systems/: collision.py  input.py  scoring.py
tty_invaders/utils/: color_effects.py  persistence.py  settings.py  timer.py
